MDL-87810 question: Fix colour contrast issues on question view
* Lighten the background for the question formulation container.
* Lighten the background for the question feedback container while
  slightly darkening the text font as well.

--- a/public/theme/classic/style/moodle.css
+++ b/public/theme/classic/style/moodle.css
@@ -34341,9 +34341,9 @@ body.path-question-type .fitem .col-form-label.visually-hidden:not(legend):not([
 
 .que .outcome,
 .que .comment {
-  color: #a67736;
+  color: #90682f;
   border-color: #fbe6ca;
-  background-color: #fcefdc;
+  background-color: #fdf3e4;
 }
 .que .outcome a,
 .que .comment a {
@@ -34353,7 +34353,7 @@ body.path-question-type .fitem .col-form-label.visually-hidden:not(legend):not([
 .que .formulation {
   color: #001a1e;
   border-color: #b3d9e0;
-  background-color: #cce6ea;
+  background-color: #e6f2f5;
 }
 
 .que.multichoice .answer div.r0 .icon.fa-check,
